--- a/src/app/customer/customer-product-cart/customer-product-cart.component.html
+++ b/src/app/customer/customer-product-cart/customer-product-cart.component.html
@@ -17,7 +17,8 @@
     
       <div class="cart-item-card" *ngFor="let item of cartItems">
         <div class="item-image">
-          <img [src]="'http://localhost:8080/api/products/' + item.product.id + '/image'" alt="{{ item.product.name }}" />
+          <!-- <img [src]="'http://localhost:8080/api/products/' + item.product.id + '/image'" alt="{{ item.product.name }}" /> -->
+          <img [src]="'https://apnacolorbeta-render-0-0-1.onrender.com/api/products/' + item.product.id + '/image'" alt="{{ item.product.name }}" />
         </div>
     
         <div class="item-details">
